Update 'l8dd84a2w-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:9fe491134f0079c9a71fff3159ba6ec3e3e50421@sha256:97f675957fadd24a7bb9e145e36d73817a83c22891974e045a2156761dfb8e7f

--- a/components/l8dd84a2w-python/overlays/development/deployment-patch.yaml
+++ b/components/l8dd84a2w-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: l8dd84a2w-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:9fe491134f0079c9a71fff3159ba6ec3e3e50421@sha256:97f675957fadd24a7bb9e145e36d73817a83c22891974e045a2156761dfb8e7f
+          name: container-image
